--- a/parsing/nginx.conf
+++ b/parsing/nginx.conf
@@ -20,7 +20,7 @@ server {
   }
   server {
     listen  90;
-    autoindex true;
+    autoindex on;
     server_name domain1.com;
     location /{
       root    /var/www/index.html;
