--- a/parsing/Makefile
+++ b/parsing/Makefile
@@ -6,9 +6,11 @@ OBJS = ${SRCS:.cpp=.o}
 CFLAGS = -Wall -Wextra -Werror -std=c++98
 CC = c++
 RM = rm -f
+INC_PATH = ../includes/
+INCLUDES = $(addprefix -I , $(INC_PATH))
 
 %.o: %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@ $(INCLUDES)
 
 all: ${NAME}
 
