refactor: function parser

--- a/parsing/nginx.conf
+++ b/parsing/nginx.conf
@@ -2,6 +2,7 @@ server {
     
     listen  80;
     server_name domain1.com;
+    root    /var/www/index.html;
     location / {
       root    /var/www/index.html;
       # server_name domain1.com;
