--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,27 @@
 		"codecvt": "cpp",
 		"ctime": "cpp",
 		"ratio": "cpp",
-		"iomanip": "cpp"
+		"iomanip": "cpp",
+		"__bit_reference": "cpp",
+		"__bits": "cpp",
+		"__config": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__functional_base": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__mutex_base": "cpp",
+		"__node_handle": "cpp",
+		"__nullptr": "cpp",
+		"__split_buffer": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"__tree": "cpp",
+		"__tuple": "cpp",
+		"bitset": "cpp",
+		"ios": "cpp",
+		"locale": "cpp",
+		"mutex": "cpp",
+		"stack": "cpp"
 	}
 }
