--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,13 +1,22 @@
+user  nginx;
+worker_processes  auto;
+
+pid        /var/run/nginx.pid;
+
 events {
+    worker_connections  1024;
 }
 
-
 http {
-	server {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    error_log  /var/log/nginx/error.log notice;
+    server {
 		listen 80;
 		root /usr/share/nginx/html;
-
-		accepted_methods	GET POST DELETE;
+		location / {
+		}
 	}
-   
+
+    include /etc/nginx/conf.d/*.conf;
 }
