--- a/configurations/tester.conf
+++ b/configurations/tester.conf
@@ -1,25 +1,28 @@
 server {
   listen 8080;
     server_name domain1.com;
-  root /mnt/nfs/homes/jbach/Documents/2901/www;
+  root /home/gefaivre/Desktop/42-webserv/www;
   autoindex on;
-  accepted_methods       GET;
+  accepted_methods DELETE POST GET;
+
+
   location / {
     accepted_methods GET;
   }
 
-  location /put/test/ {
+  location /put_test/ {
     accepted_methods POST;
   }
 
-  cgi .bla /mnt/nfs/homes/jbach/Documents/2901/cgi_tester;
-  location /postbody {
+  location /post_body/ {
+    accepted_methods POST;
+    cgi .bla /home/gefaivre/Desktop/42-webserv/testers/ubuntu_cgi_tester;
     client_max_body_size 100;
   }
 
   location /directory/ {
     accepted_methods GET;
-    root /mnt/nfs/homes/jbach/Documents/2901/YoupiBanane/;
+    root /home/gefaivre/Desktop/42-webserv/YoupiBanane/;
     index youpi.bad_extension;
   }
 }
