--- a/configurations/1site.conf
+++ b/configurations/1site.conf
@@ -4,8 +4,15 @@ server{
 
 	accepted_methods	GET POST DELETE;
 	autoindex on;
+	index get.html;
+
+	location /new_files/ {
+		root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html/new_files;
+		index index_test.html;
+    }
+
 	# cgi .php /usr/bin/php-cgi;
 	# cgi .html /usr/bin/php-cgi;
 	# cgi .py /usr/bin/python3.10;
-	root /home/gefaivre/Desktop/42-webserv/www;
+	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html;
 }
