autoindex & index OK

--- a/configurations/1site.conf
+++ b/configurations/1site.conf
@@ -3,12 +3,13 @@ server{
 	listen 8042;
 
 	accepted_methods	GET POST DELETE;
-	autoindex on;
-	index get.html;
+	autoindex off;
+	# index get.html;
 
 	location /new_files/ {
 		root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html/new_files;
-		index index_test.html;
+		# index index_test.html;
+		autoindex on;
     }
 
 	# cgi .php /usr/bin/php-cgi;
