--- a/configurations/2site.conf
+++ b/configurations/2site.conf
@@ -1,21 +1,20 @@
 server{
-	server_name server_test;
-	listen 8042;
-
-	accepted_methods	GET POST DELETE;
-	autoindex on;
-	# cgi .php /usr/bin/php-cgi;
-	# cgi .html /usr/bin/php-cgi;
-	# cgi .py /usr/bin/python3.10;
-	root /home/gefaivre/Desktop/42-webserv/www;
-}
-
-server{
-	server_name server_test2;
+	server_name sdfgsdfg;
 	listen 8042;
 
 	accepted_methods	GET POST DELETE;
 	autoindex off;
+	# cgi .php /usr/bin/php-cgi;
+	# cgi .py /usr/bin/python3.10;
+	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html;
+}
+
+server{
+	server_name 127.0.0.1;
+	listen 8042;
+
+	accepted_methods	GET POST DELETE;
+	autoindex on;
 	cgi .php /usr/bin/php-cgi;
-	root /home/gefaivre/Desktop/42-webserv/www;
+	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html;
 }
