return error config, Includes

--- a/configurations/1site.conf
+++ b/configurations/1site.conf
@@ -1,13 +1,13 @@
 server{
-	server_name server_test;
+	# server_name server_test;
 	listen 8042;
 
 	accepted_methods	GET POST DELETE;
-	autoindex off;
-	# index get.html;
+	autoindex sdfgsdfg;
+	index get.html;
 
 	location /new_files/ {
-		root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html/new_files;
+		root /mnt/nfs/homes/jbach/Documents/2901/locations/html/new_files/;
 		# index index_test.html;
 		autoindex on;
     }
@@ -15,5 +15,5 @@ server{
 	# cgi .php /usr/bin/php-cgi;
 	# cgi .html /usr/bin/php-cgi;
 	# cgi .py /usr/bin/python3.10;
-	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/html;
+	root /mnt/nfs/homes/jbach/Documents/2901/locations/html/;
 }
