--- a/configurations/2site.conf
+++ b/configurations/2site.conf
@@ -6,7 +6,7 @@ server{
 	autoindex off;
 	# cgi .php /usr/bin/php-cgi;
 	# cgi .py /usr/bin/python3.10;
-	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/locations/html;
+	root /mnt/nfs/homes/jbach/Documents/2901/locations/html;
 }
 
 server{
@@ -14,7 +14,8 @@ server{
 	listen 8042;
 
 	accepted_methods	GET POST DELETE;
-	autoindex on;
+	# autoindex on;
+	autoindex off;
 	cgi .php /usr/bin/php-cgi;
-	root /mnt/nfs/homes/gefaivre/Desktop/42-webserv/locations/html;
+	root /mnt/nfs/homes/jbach/Documents/2901/locations/html;
 }
