--- a/configurations/1site.conf
+++ b/configurations/1site.conf
@@ -3,18 +3,18 @@ server{
 	listen 8042;
 
 	accepted_methods	GET POST DELETE;
-	autoindex sdfgsdfg;
+	autoindex on;
 	index get.html;
+	root /mnt/nfs/homes/jbach/Documents/2901/locations/html/;
+	rewrite /jbach http://wikipedia.com;
 
-	location /new_files/ {
-		root /mnt/nfs/homes/jbach/Documents/2901/locations/html/new_files/;
-		# index index_test.html;
-		autoindex on;
-    }
+	# location /new_files/ {
+	# 	root /mnt/nfs/homes/jbach/Documents/2901/locations/html/new_files/;
+	# 	# index index_test.html;
+	# 	autoindex on;
+    # }
 
 	# cgi .php /usr/bin/php-cgi;
 	# cgi .html /usr/bin/php-cgi;
 	# cgi .py /usr/bin/python3.10;
-	root /mnt/nfs/homes/jbach/Documents/2901/locations/html/;
-	rewrite /jbach www.jbach.dev;
 }
