Parsing new function

--- a/configurations/1site.conf
+++ b/configurations/1site.conf
@@ -2,7 +2,7 @@ server{
 	# server_name server_test;
 	listen 8042;
 
-	accepted_methods	GET POST DELETE;
+	accepted_methods	GET;
 	autoindex on;
 	index get.html;
 	root /mnt/nfs/homes/jbach/Documents/2901/locations/html/;
